pip install urwid is broken in bionic for now, switch to archive package

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -25,16 +25,18 @@ parts:
       - lsb-release
       - pkg-config
       - python3-distutils-extra
+      - python3-urwid
     stage-packages:
       - curtin
       - iso-codes
       - lsb-release
       - python3-distutils-extra
+      - python3-urwid
     python-packages:
       - attrs
       - pyyaml
       - systemd-python
-      - urwid
+      #- urwid
     source: .
     source-type: git
   wrappers:
